[tool.poetry]
name = "concourse-pulumi-resource"
version = "0.1.0"
description = "A resource to enable execution of Pulumi projects in Concourse using the automation API and the Python bindings."
authors = ["MIT Open Learning"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"
pulumi = "^3.22.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^21.12b0"
mypy = "^0.960"
wemake-python-styleguide = "^0.16.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
